Add secure Chrome extension pairing
